# cfn-teleport

./: .gitignore  .release-please-manifest.json  .release-please.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  body.txt  build.rs  cog.toml  demo  release-please-config.json  renovate.json
.cargo/: config  config.toml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: aur-init.yml  cocogitto.yml  homebrew-test.yml  index-supported-resource-types.yml  pr-automerge.yml  pr-conventional-pr-title.yml  pr-scan.yml  pr-test.yml  pr:conventional-pr-title  publish.yml  release-automerge-weekly.yml  release-please.yml  release.yml  test.yml
.vibe/: .gitignore  development-plan-artifacts.md  development-plan-cfn-refactor.md  development-plan-dependencmarker.md  development-plan-feat-improve-dependency-validation-errors.md  development-plan-fix-error-message-display.md  development-plan.md  test-coverage-summary.md  test-results.md
.vibe/specs/artifacts/: current-state-analysis.md  plan.md  spec.md
.vibe/specs/cfn-refactor/: ANSWER-how-cloudformation-tracks-resources.md  ANSWER-why-import-works-refactor-doesnt.md  api-limitations.md  current-state-analysis.md  plan.md  research-findings.md  spec.md
.vibe/specs/dependencmarker/: current-state-analysis.md  plan.md  spec.md
.vibe/specs/feat/improve-dependency-validation-errors/: current-state-analysis.md  plan.md  spec.md
.vibe/specs/fix/error-message-display/: bug-spec.md  fix-plan.md
.vibe/specs/main/: bug-spec.md  fix-plan.md
src/: main.rs  reference_updater.rs  spinner.rs  supported_resource_types.rs
src/cfn_yaml/: errors.rs  event.rs  loader.rs  mappings.rs  mod.rs  parser.rs  readme.md  tag.rs  types.rs  util.rs
test/cdk/: .gitignore  Makefile  cdk.json  package-lock.json  package.json  refactor-test2-template.yaml  stack2-template.yaml  tsconfig.json
test/cdk/lib/: index.ts
test/cloudformation/: CfnTeleportDryRunImportTest1.json  CfnTeleportDryRunImportTest2.yaml  CfnTeleportDryRunRefactorTest1.json  CfnTeleportDryRunRefactorTest2.yaml  CfnTeleportImportTest1.json  CfnTeleportImportTest2.yaml  CfnTeleportRefactorTest1.json  CfnTeleportRenameTest1.json  CfnTeleportWindowsTest1.json  CfnTeleportWindowsTest2.yaml  Makefile  check-drift.sh  import-test1.json  import-test2-template.yaml  refactor-test1.json  test-helpers.ps1  test-helpers.sh
test/cloudformation/lib/: check-drift.sh
test/issues/issue-167/: README.md  VERIFICATION.md  simple-stack1.yaml  simple-stack2.json  stack-json.json  stack1.yaml  stack2.json  stack2.yaml
