[package]
name = "cfn-teleport"
version = "0.36.0"
edition = "2021"
description = "Moves CloudFormation resources between stacks"
license = "Apache-2.0"
homepage = "https://github.com/udondan/cfn-teleport/"
repository = "https://github.com/udondan/cfn-teleport/"
authors = ["Daniel Schroeder"]
readme = "README.md"
keywords = ["aws", "cfn", "CloudFormation", "migration", "resources"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
atty = "0.2.14"
aws-config = "1.3.0"
aws-sdk-cloudformation = "1.27.0"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
serde_json = "1.0.116"
spinach = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
proc-macro2 = "1.0.81"                               # override indirect dependency

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
