[package]
name = "cfn-teleport"
version = "0.47.0"
edition = "2021"
description = "Moves CloudFormation resources between stacks"
license = "Apache-2.0"
homepage = "https://github.com/udondan/cfn-teleport/"
repository = "https://github.com/udondan/cfn-teleport/"
authors = ["Daniel Schroeder"]
readme = "README.md"
keywords = ["aws", "cfn", "CloudFormation", "migration", "resources"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
atty = "0.2.14"
aws-config = "1.8.14"
aws-sdk-cloudformation = "1.108.0"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.0"
dialoguer = "0.12.0"
indexmap = { version = "2.13.0", features = ["serde"] }
lazy_static = "1.5.0"
serde_json = "1.0.149"
serde_yml = "0.0.12"
spinach = "3.2.0"
tokio = { version = "1.49.0", features = ["full"] }
unsafe-libyaml = "0.2.10"
proc-macro2 = "1.0.106"                               # override indirect dependency

[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
